# hexdiff

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/hexdiff/: hexdiff.hpp
src/: hexdiff.cpp  main.cpp
tests/: test_hexdiff.cpp
